refactor bomb system to add firing sound and update explosion texture

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="pause-content">
       <div class="scanlines"></div>
       <div class="game-logo">
-        <img src="/your-logo.png" alt="Game Logo">
+        <img src="/game-logo.png" alt="Game Logo">
       </div>
       <div class="menu-items">
         <div class="menu-item" id="resume-button">RESUME</div>
