refactor game over logic to display specific messages based on reason

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <div class="scanlines"></div>
     <div class="game-over-content">
       <div class="glitch-container">
-        <h1>Mission Failed</h1>
+        <h1 id="game-over-text">Mission Failed</h1>
       </div>
       <p>Final Score: <span id="final-score"></span></p>
       <p>Rank: <span id="player-rank"></span></p>
