--- a/index.html
+++ b/index.html
@@ -117,6 +117,11 @@
     </div>
   </div>
 
+  <div id="heat-ui"
+    style="position: fixed; bottom: 20px; left: 20px; width: 200px; height: 20px; background: #222; border: 2px solid #fff;">
+    <div id="heat-bar" style="height: 100%; width: 0%; background: red;"></div>
+  </div>
+
   <script type="module" src="/src/main.ts"></script>
 </body>
 
