Refactor submarine collision detection; add restart button functionality; update button styling and accessibility; enhance README with game features and contribution guidelines

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </div>
 
   <div id="pause-overlay" class="hidden">
-    <img src="/textures/vignette.png" aria-hidden="true" id="vignette" />
+    <img src="/textures/vignette.png" aria-hidden="true" id="vignette" alt="vignette" />
     <div class="pause-content">
       <div class="scanlines"></div>
       <div class="game-logo">
@@ -114,7 +114,7 @@
       </div>
       <div class="final-score">Final Score: <span id="final-score"></span></div>
       <p>Rank: <span id="player-rank"></span></p>
-      <button id="restart-button" class="restart-button">Deploy Again</button>
+      <button id="restart-button-2">Deploy Again</button>
     </div>
   </div>
 
