Refactor scanline classes for pause and game over screens; update score system initialization; simplify water spout update method; enhance compass rotation calculations

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div id="pause-overlay" class="hidden">
     <img src="/textures/vignette.png" aria-hidden="true" id="vignette" alt="vignette" />
     <div class="pause-content">
-      <div class="scanlines"></div>
+      <div class="scanlines-pause-screen"></div>
       <div class="game-logo">
         <img src="/game-logo.png" alt="Game Logo">
       </div>
@@ -107,7 +107,7 @@
   </div>
 
   <div id="game-over-overlay" class="hidden">
-    <div class="scanlines"></div>
+    <div class="scanlines-game-over-screen"></div>
     <div class="game-over-content">
       <div class="glitch-container">
         <h1 id="game-over-text">Mission Failed</h1>
