--- a/index.html
+++ b/index.html
@@ -7,10 +7,29 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="">
   <title>Mariner</title>
+  <link rel="stylesheet" href="https://unpkg.com/keyboard-css@1.2.4/dist/css/main.min.css" />
 </head>
 
 <body>
   <div id="app"></div>
+
+  <div id="controls" class="btns">
+    <p class="keys-heading">Move</p>
+    <div class="w keys-margin">
+      <kbd class="kbc-button">W</kbd>
+    </div>
+    <div class="keys-asd">
+      <kbd class="kbc-button">A</kbd>
+      <kbd class="kbc-button">S</kbd>
+      <kbd class="kbc-button">D</kbd>
+    </div>
+    <p class="keys-heading">Drop depth charge</p>
+    <kbd class="kbc-button keys-margin">Space</kbd>
+    <p class="keys-heading">Shoot</p>
+    <kbd class="kbc-button keys-margin">Left Mouse Click</kbd>
+    <p class="keys-heading">Settings / Pause Game</p>
+    <kbd class="kbc-button keys-margin">P</kbd>
+  </div>
 
   <div id="compass" class="compass-container">
     <div class="compass-window">
@@ -81,6 +100,13 @@
               <input type="checkbox" id="stats-toggle">
               <span class="toggle-slider"></span>
             </label>
+          </div>
+          <div class="setting-item">
+            <span class="setting-label">Sun Elevation</span>
+            <div class="slider-container">
+              <input type="range" id="sun-elevation" min="0" max="3" value="0" step="0.1" class="elevation-slider">
+              <span class="elevation-value">0°</span>
+            </div>
           </div>
         </div>
         <div class="menu-item" id="settings-back">BACK</div>
