Update meta description in index.html to provide a detailed overview of the Mariner game; enhance SEO and user engagement

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="">
+  <meta name="description"
+    content="Mariner is an online endless 3D game set in the ocean. Control a boat equipped with a minigun and depth charges to combat sharks, sea mines, warships, and submarines. Experience an infinite ocean, dynamic sun movements, and discover islands." />
   <title>Mariner</title>
   <link rel="stylesheet" href="https://unpkg.com/keyboard-css@1.2.4/dist/css/main.min.css" />
 </head>
