Rename controls ID to initial-controls for clarity and consistency; update related styles and functions

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div id="app"></div>
 
-  <div id="controls" class="btns">
+  <div id="initial-controls" class="btns">
     <p class="keys-heading">Move</p>
     <div class="w keys-margin">
       <kbd class="kbc-button">W</kbd>
