Add Open Graph meta tags to enhance social media sharing and SEO

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description"
     content="Mariner is an online endless 3D game set in the ocean. Control a boat equipped with a minigun and depth charges to combat sharks, sea mines, warships, and submarines. Experience an infinite ocean, dynamic sun movements, and discover islands." />
+
+  <meta property="og:title" content="Mariner - 3D Ocean Combat Game" />
+  <meta property="og:description"
+    content="Experience an endless ocean battle in Mariner. Fight enemies, warships, and submarines with powerful weapons!" />
+  <meta property="og:image"
+    content="https://cloud-mw9d2i8c1-hack-club-bot.vercel.app/0screenshot_2025-01-11_at_09.59.45.png" />
+  <meta property="og:url" content="https://mariner.vercel.app/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+
   <title>Mariner</title>
   <link rel="stylesheet" href="https://unpkg.com/keyboard-css@1.2.4/dist/css/main.min.css" />
 </head>
